refactor(fullstack): deduplication

--- a/packages/fullstack/examples/cloudflare-hello-world/package.json
+++ b/packages/fullstack/examples/cloudflare-hello-world/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cloudflare-workers-hello-world",
+  "name": "cloudflare-hello-world",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
