track the configs too

--- a/packages/interpreter/tsconfig.json
+++ b/packages/interpreter/tsconfig.json
@@ -5,8 +5,7 @@
             "ES2015",
             "DOM",
             "dom",
-            "dom.iterable",
-            "esnext"
+            "dom.iterable"
         ],
         "noImplicitAny": true,
         "removeComments": true,
