fix navigating when files are dropped

--- a/packages/interpreter/tsconfig.json
+++ b/packages/interpreter/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "module": "system",
+        "module": "CommonJS",
         "lib": [
             "ES2015",
             "DOM",
