added hot-reload as config option with default to true

--- a/examples/openid_connect_demo/Dioxus.toml
+++ b/examples/openid_connect_demo/Dioxus.toml
@@ -14,6 +14,9 @@ out_dir = "dist"
 # resource (static) file folder
 asset_dir = "public"
 
+# hot reload by default
+hot_reload = true
+
 [web.app]
 
 # HTML title tag content
