CLI Plugins WASI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ members = [
     "packages/dioxus-lib",
     "packages/core",
     "packages/cli",
+    "packages/cli-plugin",
+    "packages/cli-plugin/examples/tailwind",
+    "packages/cli-plugin/examples/test-plugin",
+    "packages/cli-plugin/examples/dx-parcel-minifier",
     "packages/cli-config",
     "packages/core-macro",
     "packages/config-macro",
@@ -144,7 +148,7 @@ reqwest = { version = "0.11.9", features = ["json"], optional = true}
 http-range = {version = "0.1.5", optional = true }
 
 [dev-dependencies]
-dioxus = { workspace = true, features = ["router"] }
+dioxus = { workspace = true, features = ["router"]}
 dioxus-ssr = { workspace = true }
 futures-util = "0.3.21"
 separator = "0.4.1"
