--- a/packages/cli-config/Cargo.toml
+++ b/packages/cli-config/Cargo.toml
@@ -12,10 +12,11 @@ keywords = ["react", "gui", "cli", "dioxus", "wasm"]
 clap = { version = "4.2", features = ["derive"], optional = true }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
+cargo_toml = { version = "0.19.1", optional = true }
 toml = { workspace = true, optional = true }
-cargo_toml = { version = "0.18.0", optional = true }
 once_cell = "1.18.0"
 tracing = { workspace = true }
+semver = {version="1.0", features=["serde"]}
 
 # bundling
 tauri-bundler = { version = "=1.4.0", features = ["native-tls-vendored"], optional = true }
