--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -23,7 +23,7 @@ serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 toml = {workspace = true}
 fs_extra = "1.2.0"
-cargo_toml = "0.18.0"
+cargo_toml = "0.19.1"
 futures-util = { workspace = true }
 notify = { version = "5.0.0-pre.16", features = ["serde"] }
 html_parser = { workspace = true }
@@ -45,34 +45,35 @@ axum-extra = { workspace = true, features = ["typed-header"] }
 tower-http = { workspace = true, features = ["full"] }
 
 headers = "0.3.7"
-walkdir = "2"
+
+# walkdir = "2"
 
 # tools download
-dirs = "5.0.1"
-reqwest = { workspace = true, features = [
-    "rustls-tls",
-    "stream",
-    "trust-dns",
-    "blocking",
-] }
-flate2 = "1.0.22"
-tar = "0.4.38"
+# dirs = "5.0.1"
+# reqwest = { version = "0.11", features = [
+#     "rustls-tls",
+#     "stream",
+#     "trust-dns",
+#     "blocking",
+# ] }
+# flate2 = "1.0.22"
+# tar = "0.4.38"
 zip = "0.6.2"
 tower = { workspace = true }
 lazy_static = "1.4.0"
 
 # plugin packages
-mlua = { version = "0.8.1", features = [
-    "lua54",
-    "vendored",
-    "async",
-    "send",
-    "macros",
-], optional = true }
 ctrlc = "3.2.3"
 open = "5.0.1"
 cargo-generate = "0.19.0"
-toml_edit = "0.21.0"
+toml_edit = "0.22.5"
+wasmtime = { version = "17.0.0", features = ['component-model'] }
+wasmtime-wasi = { version = "17.0.0", features = ['preview2'] }
+futures = "0.3.30"
+# slab = "0.4.9"
+# toml = "0.8.8"
+async-trait = "0.1.73"
+semver = "1.0"
 
 # bundling
 tauri-bundler = { version = "=1.4.*", features = ["native-tls-vendored"] }
@@ -91,11 +92,12 @@ dioxus-html = { workspace = true, features = ["hot-reload-context"] }
 dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-hot-reload = { workspace = true }
 interprocess-docfix = { version = "1.2.2" }
+gitignore = "1.0.8"
+base64 = "0.21.5"
 ignore = "0.4.22"
 
 [features]
 default = []
-plugin = ["mlua"]
 
 [[bin]]
 path = "src/main.rs"
