--- a/packages/cli/src/assets/dioxus.toml
+++ b/packages/cli/src/assets/dioxus.toml
@@ -17,16 +17,19 @@ asset_dir = "public"
 # hot reload by default
 hot_reload = true
 
+[watcher]
+
+watch_path = ["src", "examples"]
+
+[web]
+
+index_on_404 = true
+
 [web.app]
 
 # HTML title tag content
 title = "Dioxus | An elegant GUI library for Rust"
 
-[web.watcher]
-
-index_on_404 = true
-
-watch_path = ["src", "examples"]
 
 # include `assets` in web platform
 [web.resource]
@@ -75,3 +78,5 @@ short_description = "An amazing dioxus application."
 long_description = """
 An amazing dioxus application.
 """
+
+[plugins]
