--- a/packages/autofmt/Cargo.toml
+++ b/packages/autofmt/Cargo.toml
@@ -13,8 +13,8 @@ keywords = ["dom", "ui", "gui", "react"]
 [dependencies]
 dioxus-rsx = { workspace = true }
 proc-macro2 = { version = "1.0.6", features = ["span-locations"] }
-quote = "1.0"
-syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
+quote = { workspace = true }
+syn = { workspace = true, features = ["full", "extra-traits", "visit"] }
 serde = { version = "1.0.136", features = ["derive"] }
 prettyplease = { workspace = true }
 
