--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -21,7 +21,7 @@ log = "0.4.14"
 fern = { version = "0.6.0", features = ["colored"] }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
-toml = {workspace = true}
+toml = { workspace = true }
 fs_extra = "1.2.0"
 cargo_toml = "0.18.0"
 futures-util = { workspace = true }
@@ -78,7 +78,7 @@ toml_edit = "0.21.0"
 tauri-bundler = { version = "=1.4.*", features = ["native-tls-vendored"] }
 
 # formatting
-syn = { version = "2.0" }
+syn = { workspace = true }
 prettyplease = { workspace = true }
 
 manganis-cli-support = { workspace = true, features = ["webp", "html"] }
@@ -90,7 +90,8 @@ dioxus-rsx = { workspace = true }
 dioxus-html = { workspace = true, features = ["hot-reload-context"] }
 dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-hot-reload = { workspace = true }
-interprocess-docfix = { version = "1.2.2" }
+interprocess = { workspace = true }
+# interprocess-docfix = { version = "1.2.2" }
 ignore = "0.4.22"
 
 [features]
