--- a/packages/rsx-rosetta/Cargo.toml
+++ b/packages/rsx-rosetta/Cargo.toml
@@ -17,9 +17,9 @@ dioxus-autofmt = { workspace = true }
 dioxus-rsx = { workspace = true }
 dioxus-html = { workspace = true, features = ["html-to-rsx"]}
 html_parser = { workspace = true }
-proc-macro2 = "1.0.49"
-quote = "1.0.23"
-syn = { version = "2.0", features = ["full"] }
+proc-macro2 = { workspace = true }
+quote = { workspace = true }
+syn = { workspace = true, features = ["full"] }
 convert_case = "0.5.0"
 
 # [features]
