--- a/packages/server-macro/Cargo.toml
+++ b/packages/server-macro/Cargo.toml
@@ -15,7 +15,7 @@ description = "Server function macros for Dioxus"
 [dependencies]
 proc-macro2 = "^1.0.63"
 quote = "^1.0.26"
-syn = { version = "2", features = ["full"] }
+syn = { workspace = true, features = ["full"] }
 convert_case = "^0.6.0"
 server_fn_macro = "^0.6.5"
 
