--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -24,7 +24,7 @@ serde_json = "1.0.79"
 toml = { workspace = true }
 fs_extra = "1.2.0"
 cargo_toml = "0.18.0"
-futures-util = { workspace = true }
+futures-util = { workspace = true, features = ["async-await-macro"] }
 notify = { version = "5.0.0-pre.16", features = ["serde"] }
 html_parser = { workspace = true }
 cargo_metadata = "0.18.1"
