fix the fullstack launch function

--- a/packages/liveview/Cargo.toml
+++ b/packages/liveview/Cargo.toml
@@ -41,8 +41,9 @@ tower = { workspace = true }
 dioxus = { workspace = true }
 
 [features]
-default = ["hot-reload"]
+default = ["hot-reload", "multi-thread"]
 axum = ["dep:axum"]
+multi-thread = ["tokio/rt-multi-thread"]
 hot-reload = ["dioxus-hot-reload"]
 
 [[example]]
