--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -93,6 +93,7 @@ dioxus-hot-reload = { workspace = true }
 interprocess = { workspace = true }
 # interprocess-docfix = { version = "1.2.2" }
 ignore = "0.4.22"
+env_logger = "0.11.3"
 
 [features]
 default = []
