--- a/examples/mobile_demo/Cargo.toml
+++ b/examples/mobile_demo/Cargo.toml
@@ -36,10 +36,7 @@ frameworks = ["WebKit"]
 anyhow = "1.0.56"
 log = "0.4.11"
 wry = "0.35.0"
-dioxus = { path = "../../packages/dioxus" }
-dioxus-desktop = { path = "../../packages/desktop", features = [
-    "tokio_runtime",
-], default-features = false }
+dioxus = { path = "../../packages/dioxus", features = ["mobile"]}
 
 
 [target.'cfg(target_os = "android")'.dependencies]
