--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -18,7 +18,6 @@ dioxus-html = { workspace = true, features = [
     "eval",
 ] }
 dioxus-interpreter-js = { workspace = true, features = ["binary-protocol"] }
-dioxus-hot-reload = { workspace = true, optional = true }
 dioxus-cli-config = { workspace = true }
 generational-box = { workspace = true }
 
@@ -55,6 +54,8 @@ tao = { version = "0.26.1", features = ["rwh_05"] }
 global-hotkey = "0.5.0"
 rfd = "0.12"
 muda = "0.11.3"
+# hotreload only works on desktop platforms.... mobile is still wip
+dioxus-hot-reload = { workspace = true, optional = true }
 
 [target.'cfg(target_os = "ios")'.dependencies]
 objc = "0.2.7"
@@ -65,7 +66,7 @@ core-foundation = "0.9.3"
 objc = "0.2.7"
 
 [features]
-default = ["tokio_runtime", "hot-reload", "wry/objc-exception"]
+default = ["tokio_runtime", "wry/objc-exception", "hot-reload"]
 tokio_runtime = ["tokio"]
 fullscreen = ["wry/fullscreen"]
 transparent = ["wry/transparent"]
