--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,16 +89,10 @@ rustc-hash = "1.1.0"
 wasm-bindgen = "0.2.92"
 html_parser = "0.7.0"
 thiserror = "1.0.40"
-prettyplease = { package = "prettier-please", version = "0.2", features = [
-    "verbatim",
-] }
-manganis-cli-support = { version = "0.2.1", features = [
-    "html",
-] }
+prettyplease = { version = "0.2.16", features = ["verbatim"] }
+manganis-cli-support = { version = "0.2.1", features = ["html"] }
 manganis = { version = "0.2.1" }
-
 interprocess = { version = "1.2.1" }
-# interprocess = { git = "https://github.com/kotauskas/interprocess" }
 
 lru = "0.12.2"
 async-trait = "0.1.77"
