--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,7 +63,7 @@ dioxus-html-internal-macro = { path = "packages/html-internal-macro", version = 
 dioxus-hooks = { path = "packages/hooks", version = "0.5.0-alpha.0" }
 dioxus-web = { path = "packages/web", version = "0.5.0-alpha.0" }
 dioxus-ssr = { path = "packages/ssr", version = "0.5.0-alpha.0", default-features = false }
-dioxus-desktop = { path = "packages/desktop", version = "0.5.0-alpha.0" }
+dioxus-desktop = { path = "packages/desktop", version = "0.5.0-alpha.0", default-features = false }
 dioxus-mobile = { path = "packages/mobile", version = "0.5.0-alpha.0" }
 dioxus-interpreter-js = { path = "packages/interpreter", version = "0.5.0-alpha.0" }
 dioxus-liveview = { path = "packages/liveview", version = "0.5.0-alpha.0" }
