--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -63,6 +63,7 @@ objc = "0.2.7"
 objc_id = "0.1.1"
 
 [target.'cfg(target_os = "macos")'.dependencies]
+cocoa = "0.25"
 core-foundation = "0.9.3"
 objc = "0.2.7"
 
