--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -94,6 +94,7 @@ interprocess = { workspace = true }
 # interprocess-docfix = { version = "1.2.2" }
 ignore = "0.4.22"
 env_logger = "0.11.3"
+tracing-subscriber = "0.3.18"
 
 [features]
 default = []
