--- a/packages/cli-config/Cargo.toml
+++ b/packages/cli-config/Cargo.toml
@@ -22,5 +22,6 @@ tauri-bundler = { version = "=1.4.0", features = ["native-tls-vendored"], option
 tauri-utils = { version = "=1.5.*", optional = true }
 
 [features]
-default = []
+default = ["read-config"]
 cli = ["tauri-bundler", "tauri-utils", "clap", "toml", "cargo_toml"]
+read-config = []
