--- a/packages/router/Cargo.toml
+++ b/packages/router/Cargo.toml
@@ -28,7 +28,7 @@ dioxus-liveview = { workspace = true, optional = true }
 dioxus-ssr = { workspace = true, optional = true }
 dioxus-fullstack = { workspace = true, optional = true }
 tokio = { workspace = true, features = ["full"], optional = true }
-dioxus-cli-config = { workspace = true }
+dioxus-cli-config = { workspace = true, features = ["read-config"] }
 
 [features]
 default = []
