--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,8 +90,8 @@ wasm-bindgen = "0.2.92"
 html_parser = "0.7.0"
 thiserror = "1.0.40"
 prettyplease = { version = "0.2.16", features = ["verbatim"] }
-manganis-cli-support = { version = "0.2.1", features = ["html"] }
-manganis = { version = "0.2.1" }
+manganis-cli-support = { git = "https://github.com/DioxusLabs/collect-assets", branch = "more-tracing", features = ["html"] }
+manganis = { git = "https://github.com/DioxusLabs/collect-assets", branch = "more-tracing" }
 interprocess = { version = "1.2.1" }
 
 lru = "0.12.2"
