--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -15,9 +15,6 @@ thiserror = { workspace = true }
 wasm-bindgen-cli-support = "0.2"
 colored = "2.0.0"
 dioxus-cli-config = { workspace = true, features = ["cli"] }
-
-# features
-log = "0.4.14"
 fern = { version = "0.6.0", features = ["colored"] }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
@@ -81,7 +78,7 @@ tauri-bundler = { version = "=1.4.*", features = ["native-tls-vendored"] }
 syn = { workspace = true }
 prettyplease = { workspace = true }
 
-manganis-cli-support = { workspace = true, features = ["webp", "html"] }
+manganis-cli-support = { workspace = true, features = ["html"] }
 
 dioxus-autofmt = { workspace = true }
 dioxus-check = { workspace = true }
@@ -94,6 +91,8 @@ interprocess = { workspace = true }
 # interprocess-docfix = { version = "1.2.2" }
 ignore = "0.4.22"
 env_logger = "0.11.3"
+tracing-subscriber = "0.3.18"
+tracing.workspace = true
 
 [features]
 default = []
