Provide a better error message for wasm bindgen version mismatches (#2136)
* provide a better error message for wasm bindgen version mismatches

* fix clippy

* only rerun wasm bindgen if the first run fails

* remove old logs

--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -13,6 +13,7 @@ keywords = ["react", "gui", "cli", "dioxus", "wasm"]
 clap = { version = "4.2", features = ["derive", "cargo"] }
 thiserror = { workspace = true }
 wasm-bindgen-cli-support = "0.2"
+wasm-bindgen-shared = "0.2"
 colored = "2.0.0"
 dioxus-cli-config = { workspace = true, features = ["cli"] }
 fern = { version = "0.6.0", features = ["colored"] }
