--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -96,7 +96,7 @@ interprocess = { workspace = true }
 ignore = "0.4.22"
 env_logger = "0.11.3"
 tracing-subscriber = "0.3.18"
-tracing.workspace = true
+tracing = { workspace = true }
 
 [features]
 default = []
