--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,7 +45,7 @@ jobs:
         platform:
           - target: x86_64-pc-windows-msvc
             os: windows-latest
-          - target: aaarch64-pc-windows-msvc
+          - target: aarch64-pc-windows-msvc
             os: windows-latest
           - target: x86_64-apple-darwin
             os: macos-latest
