--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -98,6 +98,10 @@ env_logger = "0.11.3"
 tracing-subscriber = "0.3.18"
 tracing = { workspace = true }
 
+# on maco, we need to specify the vendored feature on ssl when cross compiling
+[target.'cfg(target_os = "macos")'.dependencies]
+openssl = { version = "0.10", features = ["vendored"], optional = true }
+
 [features]
 default = []
 plugin = ["mlua"]
