--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -95,7 +95,8 @@ interprocess = { workspace = true }
 # interprocess-docfix = { version = "1.2.2" }
 ignore = "0.4.22"
 env_logger = "0.11.3"
-tracing-subscriber = "0.3.18"
+
+tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
 tracing = { workspace = true }
 
 # on maco, we need to specify the vendored feature on ssl when cross compiling
