--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 description = "WebView renderer for Dioxus"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/DioxusLabs/dioxus/"
-homepage = "https://dioxuslabs.com/learn/0.4/getting_started/desktop"
+homepage = "https://dioxuslabs.com/learn/0.5/getting_started"
 keywords = ["dom", "ui", "gui", "react"]
 
 [dependencies]
