--- a/packages/mobile/Cargo.toml
+++ b/packages/mobile/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Jonathan Kelley"]
 edition = "2021"
 description = "Mobile-compatible renderer for Dioxus"
 repository = "https://github.com/DioxusLabs/dioxus/"
-homepage = "https://dioxuslabs.com/learn/0.4/getting_started/mobile"
+homepage = "https://dioxuslabs.com/learn/0.5/getting_started"
 keywords = ["dom", "ui", "gui", "react"]
 license = "MIT OR Apache-2.0"
 
