--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -115,7 +115,7 @@ name = "dx"
 tempfile = "3.3"
 
 [package.metadata.binstall]
-pkg-url = "{ repo }/releases/download/v{ version }/dx-{ target }-{ archive-suffix }"
+pkg-url = "{ repo }/releases/download/v{ version }/dx-{ target }"
 
 [package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
 pkg-fmt = "zip"
