--- a/packages/fullstack/examples/static-hydrated/Cargo.toml
+++ b/packages/fullstack/examples/static-hydrated/Cargo.toml
@@ -7,14 +7,11 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus-web = { workspace = true, features = ["hydrate"], optional = true }
-dioxus = { workspace = true }
-dioxus-fullstack = { workspace = true }
-dioxus-router = { workspace = true, features = ["fullstack"] }
+dioxus = { workspace = true, features = ["fullstack", "router"] }
 tokio = { workspace = true, features = ["full"], optional = true }
 serde = "1.0.159"
 
 [features]
 default = []
-server = ["tokio", "dioxus-fullstack/server"]
-web = ["dioxus-web"]
+server = ["tokio", "dioxus/axum"]
+web = ["dioxus/web"]
