--- a/packages/html/Cargo.toml
+++ b/packages/html/Cargo.toml
@@ -26,6 +26,7 @@ tokio = { workspace = true, features = ["fs", "io-util"], optional = true }
 rfd = { version = "0.14", optional = true }
 futures-channel = { workspace = true }
 serde_json = { version = "1", optional = true }
+tracing.workspace = true
 
 [dependencies.web-sys]
 optional = true
