move CLI hot reloading websocket code into dioxus-hot-reload

--- a/packages/fullstack/Cargo.toml
+++ b/packages/fullstack/Cargo.toml
@@ -68,7 +68,7 @@ tokio = { workspace = true, features = ["rt", "sync", "rt-multi-thread"], option
 
 [features]
 default = ["hot-reload"]
-hot-reload = ["serde_json"]
+hot-reload = ["serde_json", "dioxus-hot-reload/serve"]
 web = ["dioxus-web", "web-sys"]
 desktop = ["dioxus-desktop"]
 mobile = ["dioxus-mobile"]
