--- a/packages/static-generation/Cargo.toml
+++ b/packages/static-generation/Cargo.toml
@@ -15,14 +15,19 @@ dioxus-fullstack = { workspace = true }
 dioxus-lib.workspace = true
 dioxus-router = { workspace = true }
 dioxus-ssr = { workspace = true, features = ["incremental"], optional = true }
+axum = { workspace = true, features = ["ws", "macros"], optional = true }
+tower-http = { workspace = true, features = ["fs"], optional = true }
+dioxus-hot-reload = { workspace = true, features = ["serve"], optional = true }
+dioxus-cli-config = { workspace = true, features = ["read-config"], optional = true }
 dioxus-web = { workspace = true, features = ["hydrate"], optional = true }
 tokio = { workspace = true, optional = true }
 http = { workspace = true, optional = true }
+tracing.workspace = true
 
 [dev-dependencies]
 dioxus = { workspace = true }
 
 [features]
 default = []
-site-generation = ["dioxus-fullstack/server", "dioxus-router/ssr", "dioxus-ssr", "tokio", "http"]
+server = ["dioxus-fullstack/server", "dioxus-router/ssr", "dioxus-ssr", "tokio", "http", "dep:axum", "tower-http", "dioxus-hot-reload", "dioxus-cli-config"]
 web = ["dioxus-fullstack/web", "dioxus-router/web", "dioxus-web"]
