add more examples

--- a/packages/config-macro/Cargo.toml
+++ b/packages/config-macro/Cargo.toml
@@ -19,6 +19,7 @@ quote = { workspace = true }
 [features]
 default = []
 fullstack = []
+static-generation = []
 desktop = []
 mobile = []
 web = []
