--- a/packages/static-generation/Cargo.toml
+++ b/packages/static-generation/Cargo.toml
@@ -13,7 +13,7 @@ resolver = "2"
 [dependencies]
 dioxus-fullstack = { workspace = true }
 dioxus-lib.workspace = true
-dioxus-router = { workspace = true }
+dioxus-router = { workspace = true, features = ["fullstack"]}
 dioxus-ssr = { workspace = true, features = ["incremental"], optional = true }
 axum = { workspace = true, features = ["ws", "macros"], optional = true }
 tower-http = { workspace = true, features = ["fs"], optional = true }
@@ -22,6 +22,7 @@ dioxus-cli-config = { workspace = true, features = ["read-config"], optional = t
 dioxus-web = { workspace = true, features = ["hydrate"], optional = true }
 tokio = { workspace = true, optional = true }
 http = { workspace = true, optional = true }
+tower = { workspace = true, features = ["util"], optional = true }
 tracing.workspace = true
 
 [dev-dependencies]
@@ -29,5 +30,5 @@ dioxus = { workspace = true }
 
 [features]
 default = []
-server = ["dioxus-fullstack/server", "dioxus-router/ssr", "dioxus-ssr", "tokio", "http", "dep:axum", "tower-http", "dioxus-hot-reload", "dioxus-cli-config"]
+server = ["dioxus-fullstack/server", "dioxus-router/ssr", "dioxus-ssr", "tokio", "http", "dep:axum", "tower-http", "dioxus-hot-reload", "dioxus-cli-config", "tower"]
 web = ["dioxus-fullstack/web", "dioxus-router/web", "dioxus-web"]
